Native/flinkclusterrestservice.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flink-cluster
    type: flink-native-kubernetes
spec:
  ports:
  - name: rest
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: flink-cluster
    component: jobmanager
    type: flink-native-kubernetes
  sessionAffinity: None
  type: ClusterIP
