Native/flinkclusterservice.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flink-cluster
    type: flink-native-kubernetes
spec:
  clusterIP: None
  ports:
  - name: jobmanager-rpc
    port: 6123
    protocol: TCP
    targetPort: 6123
  - name: blobserver
    port: 6124
    protocol: TCP
    targetPort: 6124
  selector:
    app: flink-cluster
    component: jobmanager
    type: flink-native-kubernetes
  sessionAffinity: None
  type: ClusterIP
