Native/flinkingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink
spec:
  rules:
  - host: native-flink.com
    http:
      paths:
      - backend:
          service:
            name: flink-cluster-rest
            port:
              number: 8081
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - native-flink.com
    secretName: secret
